--- a/index.html
+++ b/index.html
@@ -54,10 +54,10 @@
 								<div class="container">
 									<header class="major">
 										<h2>A student who urgently need a job!</h2>
-										<p>Just kidding(LoL)<br />
-										I'm just a freshman and I'm totally not worried</a>.</p>
+										<p>Just kidding<br />
+										I'm just a freshman and I'm totally not worried(doge)</a>.</p>
 									</header>
-									<p>Faucibus sed lobortis aliquam lorem blandit. Lorem eu nunc metus col. Commodo id in arcu ante lorem ipsum sed accumsan erat praesent faucibus commodo ac mi lacus. Adipiscing mi ac commodo. Vis aliquet tortor ultricies non ante erat nunc integer eu ante ornare amet commetus vestibulum blandit integer in curae ac faucibus integer non. Adipiscing cubilia elementum.</p>
+									<p>But in all,I have to finish my professor's work.So just take it easy,I am not that mighty as I describe myself in the following passage. However,that's  who I'm dreaming of in the future,when I really graduate from my college,from my NJUST. </p>
 								</div>
 							</section>
 
@@ -65,12 +65,12 @@
 							<section id="two">
 								<div class="container">
 									<h3>Things I Can Do</h3>
-									<p>Integer eu ante ornare amet commetus vestibulum blandit integer in curae ac faucibus integer non. Adipiscing cubilia elementum integer lorem ipsum dolor sit amet.</p>
+									<p>I can do a professional hand drawing work,especially in my car design,which is my major. Of course,I can also operate some programmes,like PS,AI or Blender. </p>
 									<ul class="feature-icons">
-										<li class="icon solid fa-code">Write all the code</li>
+										<li class="icon solid fa-code">Hand drawing</li>
 										<li class="icon solid fa-cubes">Stack small boxes</li>
 										<li class="icon solid fa-book">Read books and stuff</li>
-										<li class="icon solid fa-coffee">Drink much coffee</li>
+										<li class="icon solid fa-coffee">Learning professional softwares</li>
 										<li class="icon solid fa-bolt">Lightning bolt</li>
 										<li class="icon solid fa-users">Shadow clone technique</li>
 									</ul>
@@ -81,7 +81,7 @@
 							<section id="three">
 								<div class="container">
 									<h3>A Few Accomplishments</h3>
-									<p>Integer eu ante ornare amet commetus vestibulum blandit integer in curae ac faucibus integer non. Adipiscing cubilia elementum integer. Integer eu ante ornare amet commetus.</p>
+									<p>During my four years in NJUST,I achieve lots of </p>
 									<div class="features">
 										<article>
 											<a href="#" class="image"><img src="images/pic01.jpg" alt="" /></a>
