--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
 							<section id="three">
 								<div class="container">
 									<h3>A Few Accomplishments</h3>
-									<p>During my four years in NJUST,I achieve lots of </p>
+									<p>During my four years in NJUST,I achieve lots of prize.For example,I joined the school football team and represent our school to play the national champion league and we also win the first prize.Else,I joined the Formula Car Racing Club,and we also achieve lots of prides.As a designer,I also attend the Reddot Prize,and achieve some prizes.</p>
 									<div class="features">
 										<article>
 											<a href="#" class="image"><img src="images/pic01.jpg" alt="" /></a>
