--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
 									<p>During my four years in NJUST,I achieve lots of prize.For example,I joined the school football team and represent our school to play the national champion league and we also win the first prize.Else,I joined the Formula Car Racing Club,and we also achieve lots of prides.As a designer,I also attend the Reddot Prize,and achieve some prizes.</p>
 									<div class="features">
 										<article>
-											<a href="#" class="image"><img src="images/pic01.jpg" alt="" /></a>
+											<a href="#" class="image"><img src="images/football.jpg" alt="" /></a>
 											<div class="inner">
 												<h4>Possibly broke spacetime</h4>
 												<p>Integer eu ante ornare amet commetus vestibulum blandit integer in curae ac faucibus integer adipiscing ornare amet.</p>
