--- a/index.html
+++ b/index.html
@@ -86,15 +86,15 @@
 										<article>
 											<a href="#" class="image"><img src="images/football.JPG" alt="" /></a>
 											<div class="inner">
-												<h4>Possibly broke spacetime</h4>
-												<p>Integer eu ante ornare amet commetus vestibulum blandit integer in curae ac faucibus integer adipiscing ornare amet.</p>
+												<h4>We won the 'European' Champion:-)</h4>
+												<p>After months of hard training,we finally stand on the European field.Fortunately,we invite Neymar.jr to be our teammate.Here is the photo that Neymar happiliy hold the champion Cup.We all feel proud and satified.</p>
 											</div>
 										</article>
 										<article>
 											<a href="#" class="image"><img src="images/car.JPG" alt="" /></a>
 											<div class="inner">
 												<h4>Terraformed a small moon</h4>
-												<p>Integer eu ante ornare amet commetus vestibulum blandit integer in curae ac faucibus integer adipiscing ornare amet.</p>
+												<p>As car design is my major,I have to do lots of sketch training for my career.The photo shows my idea for the Lamborghini company.</p>
 											</div>
 										</article>
 										<article>
