--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 		<!-- Header -->
 			<section id="header">
 				<header>
-					<span class="image avatar"><img src="images/avatar.jpg" alt="" /></span>
+					<span class="image avatar"><img src="images/tx.png" alt="" /></span>
 					<h1 id="logo"><a href="#">Ryan Chen</a></h1>
 					<p>I got my rebirth in NJUST<br />
 					and now I'm totally insane</p>
@@ -49,7 +49,7 @@
 						<!-- One -->
 							<section id="one">
 								<div class="image main" data-position="center">
-									<img src="images/banner.jpg" alt="" />
+									<img src="images/bg.PNG" alt="" />
 								</div>
 								<div class="container">
 									<header class="major">
@@ -93,15 +93,15 @@
 										<article>
 											<a href="#" class="image"><img src="images/car.JPG" alt="" /></a>
 											<div class="inner">
-												<h4>Terraformed a small moon</h4>
+												<h4>Make devotion to greater car people</h4>
 												<p>As car design is my major,I have to do lots of sketch training for my career.The photo shows my idea for the Lamborghini company.</p>
 											</div>
 										</article>
 										<article>
-											<a href="#" class="image"><img src="images/pic03.jpg" alt="" /></a>
+											<a href="#" class="image"><img src="images/reddot.jpeg" alt="" /></a>
 											<div class="inner">
-												<h4>Snapped dark matter in the wild</h4>
-												<p>Integer eu ante ornare amet commetus vestibulum blandit integer in curae ac faucibus integer adipiscing ornare amet.</p>
+												<h4>Gain my first prize as a designer</h4>
+												<p>Luckily, with the help of my elder schoolmate, I successfully gain my first important prize in my car design career.In my opinion,it's my indentification as one of a designer among large number of numbers.</p>
 											</div>
 										</article>
 									</div>
